fix align label

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -33,7 +33,6 @@ input {
   @apply rounded;
   @apply border-2;
   @apply p-2;
-  @apply transition;
 }
 
 .dark {
